--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "pixi.js": "^4.1.0",
     "three": "^0.82.1",
     "webpack": "^1.13.3"
   },
