--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development webpack-dev-server --content-base assets/"
+    "dev": "webpack serve --open "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "pixi.js": "^4.1.0",
     "three": "^0.82.1",
-    "webpack": "^1.13.3"
+    "webpack": "4.46.0",
+    "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
-    "webpack-dev-server": "^1.16.2"
+    "typescript": "^4.6.3",
+    "webpack-dev-server": "4.8.0"
   }
 }
