--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
-    "pixi.js": "^4.1.0",
+    "pixi.js": "6.3.0",
     "three": "^0.82.1",
     "webpack": "4.46.0",
     "webpack-cli": "^4.9.2"
