--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "pixi.js": "6.3.0",
-    "three": "^0.82.1",
+    "socket.io-client": "^2.4.0",
     "webpack": "4.46.0",
     "webpack-cli": "^4.9.2"
   },
