--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "glob-parent": "5.1.2",
     "pixi.js": "6.3.0",
     "socket.io-client": "^2.4.0",
+    "ts-loader": "^8.2.0",
     "webpack": "4.46.0",
-    "glob-parent": "5.1.2",
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
