--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pixi.js": "6.3.0",
     "socket.io-client": "^2.4.0",
     "ts-loader": "^8.2.0",
+    "uuid": "^8.3.2",
     "webpack": "4.46.0",
     "webpack-cli": "^4.9.2"
   },
